--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "netlify-cli": "^20.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "react-time-picker": "^7.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
