--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "fast-xml-parser": "^5.2.1",
     "lucide-react": "^0.503.0",
     "netlify-cli": "^20.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
-    "react-time-picker": "^7.0.0"
+    "react-time-picker": "^7.0.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
