--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "fast-xml-parser": "^5.2.1",
+    "framer-motion": "^12.9.7",
     "lucide-react": "^0.503.0",
     "netlify-cli": "^20.1.1",
     "react": "^19.0.0",
