--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@notionhq/client": "^3.0.1",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
     "fast-xml-parser": "^5.2.1",
