--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@notionhq/client": "^3.0.1",
+    "@notionhq/client": "^3.1.2",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "fast-xml-parser": "^5.2.1",
     "framer-motion": "^12.9.7",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.503.0",
+    "moment": "^2.30.1",
     "netlify-cli": "^20.1.1",
+    "node-fetch": "^3.3.2",
+    "parse-multipart-data": "^1.5.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
