--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fast-xml-parser": "^5.2.1",
     "framer-motion": "^12.9.7",
     "html2pdf.js": "^0.10.3",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "netlify-cli": "^20.1.1",
@@ -26,7 +27,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "react-time-picker": "^7.0.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
