--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-time-picker": "^7.0.0",
     "rss-parser": "^3.13.0",
     "swiper": "^11.2.8",
-    "tesseract.js": "^6.0.1",
+    "tesseract.js": "5.0.4",
     "zod": "^4.1.0",
     "zustand": "^5.0.8"
   },
