--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^3.1.2",
+    "@supabase/supabase-js": "^2.56.0",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
     "csv-parse": "^5.6.0",
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-image-crop": "^11.0.10",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.5.3",
     "react-time-picker": "^7.0.0",
     "rss-parser": "^3.13.0",
