--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+# ───── Logs ─────
 logs
 *.log
 npm-debug.log*
@@ -7,12 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# ───── Dependencies & Build ─────
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# ───── Editor Directories & Files ─────
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,9 +24,34 @@ dist-ssr
 *.sln
 *.sw?
 
-# Optional: only ignore Netlify state, not the config or functions
+# ───── Netlify ─────
 .netlify/state.json
 .netlify
 .env
+.env.local
 
+# ───── Testing & Coverage ─────
+coverage/
+__mocks__/
+__snapshots__/
+*.test.js
+*.test.jsx
+*.spec.js
+*.spec.jsx
+jest.setup.js
+vitest.config.js
+vitest.setup.js
+vitest.setup.jsx
+src/components/__tests__/
+src/pages/__tests__/
+src/tests/
 
+# ───── System Junk Files (Windows/Unix) ─────
+nul
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
+# ───── Others ─────
+*.tgz
+*.tar.gz
