--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "find:jsx-tests": "node scripts/find-jsx-tests.js"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   },
   "dependencies": {
     "@notionhq/client": "^3.1.2",
     "@supabase/supabase-js": "^2.56.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
     "csv-parse": "^5.6.0",
@@ -27,6 +35,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-image-crop": "^11.0.10",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.5.3",
@@ -38,11 +47,16 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^6.3.1",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^3.2.4"
   }
 }
