--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "find:jsx-tests": "node scripts/find-jsx-tests.js"
+    "find:jsx-tests": "node scripts/find-jsx-tests.js",
+    "generate:legal-pdfs": "node scripts/generateLegalPDF.cjs",
+    "generate:legal": "node scripts/generateLegalPDF.cjs"
   },
   "jest": {
     "moduleNameMapper": {
@@ -16,16 +18,20 @@
   },
   "dependencies": {
     "@notionhq/client": "^3.1.2",
-    "@supabase/supabase-js": "^2.56.0",
+    "@react-email/render": "^1.2.2",
+    "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/forms": "^0.5.10",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "fast-xml-parser": "^5.2.1",
-    "framer-motion": "^12.9.7",
+    "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
@@ -33,16 +39,21 @@
     "node-fetch": "^3.3.2",
     "parse-multipart-data": "^1.5.0",
     "pdf-parse": "^1.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "pdfkit": "^0.17.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-image-crop": "^11.0.10",
     "react-rnd": "^10.5.2",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "^7.8.2",
     "react-time-picker": "^7.0.0",
+    "recharts": "^3.1.2",
+    "resend": "^6.0.2",
     "rss-parser": "^3.13.0",
     "swiper": "^11.2.8",
     "tesseract.js": "5.0.4",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.0",
     "zustand": "^5.0.8"
   },
@@ -50,13 +61,13 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.1",
-    "vite-plugin-pwa": "^1.0.0",
+    "vite-plugin-pwa": "^1.0.3",
     "vitest": "^3.2.4"
   }
 }
