--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-image-crop": "^11.0.10",
+    "react-is": "^19.1.1",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.8.2",
     "react-time-picker": "^7.0.0",
-    "recharts": "^3.1.2",
+    "recharts": "^2.15.4",
     "resend": "^6.0.2",
     "rss-parser": "^3.13.0",
     "swiper": "^11.2.8",
