--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@notionhq/client": "^3.1.2",
     "@react-email/render": "^1.2.2",
-    "@supabase/supabase-js": "^2.57.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/forms": "^0.5.10",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
@@ -37,6 +37,7 @@
     "moment": "^2.30.1",
     "netlify-cli": "^20.1.1",
     "node-fetch": "^3.3.2",
+    "openai": "^5.20.1",
     "parse-multipart-data": "^1.5.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.2",
@@ -50,7 +51,7 @@
     "react-router-dom": "^7.8.2",
     "react-time-picker": "^7.0.0",
     "recharts": "^2.15.4",
-    "resend": "^6.0.2",
+    "resend": "^6.0.3",
     "rss-parser": "^3.13.0",
     "swiper": "^11.2.8",
     "tesseract.js": "5.0.4",
