--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "@notionhq/client": "^3.1.2",
     "@react-email/render": "^1.2.2",
     "@supabase/supabase-js": "^2.57.4",
-    "@tailwindcss/forms": "^0.5.10",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "fast-xml-parser": "^5.2.1",
     "framer-motion": "^12.23.12",
     "html2pdf.js": "^0.10.3",
@@ -37,7 +36,7 @@
     "moment": "^2.30.1",
     "netlify-cli": "^20.1.1",
     "node-fetch": "^3.3.2",
-    "openai": "^5.20.1",
+    "openai": "^5.20.3",
     "parse-multipart-data": "^1.5.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.13.0",
@@ -60,11 +59,15 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "daisyui": "^5.1.13",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
