--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "vitest run",
     "find:jsx-tests": "node scripts/find-jsx-tests.js",
     "generate:legal-pdfs": "node scripts/generateLegalPDF.cjs",
-    "generate:legal": "node scripts/generateLegalPDF.cjs"
+    "generate:legal": "node scripts/generateLegalPDF.cjs",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "jest": {
     "moduleNameMapper": {
@@ -40,6 +42,7 @@
     "parse-multipart-data": "^1.5.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.13.0",
+    "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -59,6 +62,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -68,6 +72,12 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.13",
+    "eslint": "^9.37.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
